<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <TextView
        android:id="@+id/text_players_1"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/players_1"
        android:textSize="@dimen/x_text_default"
        app:layout_constraintBottom_toTopOf="@+id/edit_players_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edit_players_1"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/names_hint"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@id/text_players_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_players_1" />

    <TextView
        android:id="@+id/text_players_2"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/players_2"
        android:textSize="@dimen/x_text_default"
        app:layout_constraintBottom_toTopOf="@+id/edit_players_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_players_1" />

    <EditText
        android:id="@+id/edit_players_2"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/names_hint"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/startGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_players_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGame"
        style="@style/button_default_player_two"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/x_text_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_players_2" />

</androidx.constraintlayout.widget.ConstraintLayout>